RESOLVED FIXED 250590
REGRESSION (STP 161): cache-storage 100+ test failures on WPT
https://bugs.webkit.org/show_bug.cgi?id=250590
Summary REGRESSION (STP 161): cache-storage 100+ test failures on WPT
Ahmad Saleem
Reported Friday, January 13, 2023 8:58:34 PM UTC
Created attachment 464490 [details] WPT Diff - STP161 vs STP160 - New Failures Hi Team, While looking into progressions on WPT, I noticed that with STP161, we are now failing 100+ tests here: Link - https://wpt.fyi/results/service-workers/cache-storage?diff&filter=ADC&run_id=6261567780290560&run_id=5119896183111680 I am attaching screenshot as well to highlight 100+ failing tests. This bug is to track and fix them. Thanks!
Attachments
WPT Diff - STP161 vs STP160 - New Failures (265.98 KB, image/png)
2023-01-13 12:58 PST, Ahmad Saleem
no flags
Radar WebKit Bug Importer
Comment 1 Friday, January 13, 2023 9:12:59 PM UTC
youenn fablet
Comment 2 Wednesday, January 25, 2023 1:09:23 PM UTC
WPT.fyi is using ephemeral sessions which uses a different code path, that might explain why we are not seeing the issue internally.
youenn fablet
Comment 3 Wednesday, January 25, 2023 1:21:47 PM UTC
EWS
Comment 4 Thursday, January 26, 2023 11:51:57 AM UTC
Committed 259418@main (7fa5066e9d64): <https://commits.webkit.org/259418@main> Reviewed commits have been landed. Closing PR #9101 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.